--- a/web/rights.html
+++ b/web/rights.html
@@ -29,7 +29,6 @@ src="images/theuniversityofchicagolibrary.gif"/></a></div>
 	<li id="youarehere">Rights</li>
 	<li><a href="acknowledgements.html">Acknowledgements</a></li>
 		<li><a href="links.html">Links</a></li>
-	<li><a href="presskit.html">Press Kit</a></li>
 	</ul>
 </div><!--navigation-->		
 
@@ -60,18 +59,18 @@ src="images/theuniversityofchicagolibrary.gif"/></a></div>
 <h3>Le Roman de la Rose</h3>
   <p> <strong>Requesting permission:</strong>
 Use of images from <i>Le Roman de la Rose</i> requires permission from The University of Chicago and Johns Hopkins University.  Please consult the <a
-      href="http://www.lib.uchicago.edu/e/spcl/research/permissions.html">permissions policies</a> of the Special Collections Research Center and the Sheridan Library's <a href="http://rose.mse.jhu.edu">Roman de la Rose</a> site. 
+      href="https://www.lib.uchicago.edu/scrc/visiting/permission/">permissions policies</a> of the Special Collections Research Center and the Sheridan Library's <a href="https://dlmm.library.jhu.edu/en/romandelarose/">Roman de la Rose</a> site. 
      <p> <strong>Requesting reproductions:</strong>
-To request high resolution reproductions of images from <i>Le Roman de la Rose</i> please see the Sheridan Library's <a href="http://rose.mse.jhu.edu">Roman de la Rose</a> site. 
+To request high resolution reproductions of images from <i>Le Roman de la Rose</i> please see the Sheridan Library's <a href="https://dlmm.library.jhu.edu/en/romandelarose/">Roman de la Rose</a> site. 
 
 
 <h3>Le Jeu des échecs moralisé</h3>
      <p> <strong>Requesting permission:</strong>
 Use of images from <i>Le Jeu des échecs moralisé</i>  requires permission from The University of Chicago.  Please consult the <a
-      href="http://www.lib.uchicago.edu/e/spcl/research/permissions.html">permissions policies</a> of the Special Collections Research Center. 
+      href="https://www.lib.uchicago.edu/scrc/visiting/permission/">permissions policies</a> of the Special Collections Research Center. 
 
      <p> <strong>Requesting reproductions:</strong>
-To request high resolution reproductions of images from <i>Le Jeu des échecs moralisé</i> please consult the Special Collections Research Center's <a href=" http://www.lib.uchicago.edu/e/spcl/using/copy/index.html">Copying Services</a> page.
+To request high resolution reproductions of images from <i>Le Jeu des échecs moralisé</i> please consult the Special Collections Research Center's <a href="https://www.lib.uchicago.edu/scrc/visiting/copyservices/">Copying Services</a> page.
 
  
 
