--- a/web/links.html
+++ b/web/links.html
@@ -29,7 +29,6 @@ src="images/theuniversityofchicagolibrary.gif"/></a></div>
 	<li><a href="rights.html">Rights</a></li>
 	<li><a href="acknowledgements.html">Acknowledgements</a></li>
 	<li id="youarehere">Links</li>
-	<li><a href="presskit.html">Press Kit</a></li>
 	</ul>
 </div><!--navigation-->		
 
@@ -38,20 +37,18 @@ src="images/theuniversityofchicagolibrary.gif"/></a></div>
 
 <h1>Related Links</h1>
 
-<h3><a href="http://rose.mse.jhu.edu/"> Le Roman de la Rose: Digital Surrogates of Medieval Manuscripts</a></h3>
+<h3><a href="https://roseandchess.lib.uchicago.edu/RomandelaRosehandout.pdf">Guide to the University of Chicago's "Rose and Chess"</a></h3>
+
+<h3><a href="https://dlmm.library.jhu.edu/en/romandelarose/"> Le Roman de la Rose: Digital Surrogates of Medieval Manuscripts</a></h3>
 <p>Johns Hopkins University is hosting a project to present multiple
 manuscripts of Le Roman de la Rose at <a href="http://romandelarose.org">
 http://romandelarose.org/</a>. The University of Chicago Library&rsquo;s
 Le Roman de la Rose is also available on this site.</p>
 
-  <h3><a href="http://gallica.bnf.fr/ark:/12148/bpt6k71274r">Le Roman de La Rose</a> </h3>
-  <p>Old French version of the text <i>Le  Roman de La Rose</i></p>
+<h3><a href="https://gallica.bnf.fr/services/engine/search/sru?operation=searchRetrieve&version=1.2&query=(gallica%20all%20%22roman%20de%20la%20rose%22)">Roman de la Rose from the Bibliotheque nacionale de France</a></h3>
 
-    <h3><a href=" http://gallica.bnf.fr/notice?N=FRBNF37227825&UC=o">Le Roman de La Rose</a> </h3>
-  <p>Modern French version of the text <i>Le  Roman de La Rose</i></p>
-
-      <h3><a href="http://blog.pecia.fr">PECIA: Le manuscrit médiéval ~ The medieval manuscript</a> </h3>
-  <p>A blog dedicated to medieval manuscripts, up to and including their relationships with early printing.</p>
+<h3><a href="http://blog.pecia.fr">PECIA: Le manuscrit médiéval ~ The medieval manuscript</a> </h3>
+<p>A blog dedicated to medieval manuscripts, up to and including their relationships with early printing.</p>
 
   
   
