--- a/web/links.html
+++ b/web/links.html
@@ -37,7 +37,7 @@ src="images/theuniversityofchicagolibrary.gif"/></a></div>
 
 <h1>Related Links</h1>
 
-<h3><a href="https://roseandchess.lib.uchicago.edu/RomandelaRosehandout.pdf">Guide to the University of Chicago's "Rose and Chess"</a></h3>
+<h3><a href="http://roseandchess.lib.uchicago.edu/RomandelaRosehandout.pdf">Guide to the University of Chicago's "Rose and Chess"</a></h3>
 
 <h3><a href="https://dlmm.library.jhu.edu/en/romandelarose/"> Le Roman de la Rose: Digital Surrogates of Medieval Manuscripts</a></h3>
 <p>Johns Hopkins University is hosting a project to present multiple
