Fixes for pageturning.

--- a/web/chess.html
+++ b/web/chess.html
@@ -39,7 +39,7 @@ src="images/theuniversityofchicagolibrary.gif"/></a></div>
   <br /><span style="font-size: .7em">University of Chicago Library MS 392</span>
   </h1>
 
-<p><b>View the <a href="/view.php?doc=392&amp;obj=013">digital manuscript</a></b> </p>
+<p><b>View the <a href="/view.php#?doc=392&c=&m=&s=&cv=12&xywh=-6247%2C-442%2C18400%2C8840">digital manuscript</a></b> </p>
 
 <img id="leftimage" src="images/chess-010.jpg">
 <p>
