--- a/web/rose.html
+++ b/web/rose.html
@@ -39,8 +39,7 @@ src="images/theuniversityofchicagolibrary.gif"/></a></div>
 <br /><span style="font-size: .7em">University of Chicago Library MS 1380</span>
   </h1>
 
-
-<p><b>View the <a href="/view.php?doc=1380&amp;obj=013">digital manuscript</a></b> </p>
+<p><b>View the <a href="/view.php#?doc=1380&c=&m=&s=&cv=12&xywh=-5517%2C-442%2C16940%2C8839">digital manuscript</a></b> </p>
 
 <img id="leftimage" src="images/rose-013.jpg">
 <p>
