Updated department name.

--- a/web/rights.html
+++ b/web/rights.html
@@ -45,12 +45,12 @@ src="images/theuniversityofchicagolibrary.gif"/></a></div>
       included with each image used.</p>
 
      <h3>Le Roman de la Rose</h3>
-  <p> <strong>Credit Line:</strong>  <i>Le Roman de la Rose,</i> University of Chicago Library MS 1380, [image number], [leaf number], Special Collection Research Center, University of Chicago Library.  Image courtesy of The Sheridan Libraries, Johns Hopkins University. 
-<p>e.g. the title page would be cited as:<br> <i>Le Roman de la Rose,</i> University of Chicago Library MS 1380, image 13, leaf 1r, Special Collection Research Center, University of Chicago Library.  Image courtesy of The Sheridan Libraries, Johns Hopkins University. 
+  <p> <strong>Credit Line:</strong>  <i>Le Roman de la Rose,</i> University of Chicago Library MS 1380, [image number], [leaf number], Hanna Holborn Gray Special Collections Research Center, University of Chicago Library.  Image courtesy of The Sheridan Libraries, Johns Hopkins University. 
+<p>e.g. the title page would be cited as:<br> <i>Le Roman de la Rose,</i> University of Chicago Library MS 1380, image 13, leaf 1r, Hanna Holborn Gray Special Collections Research Center, University of Chicago Library.  Image courtesy of The Sheridan Libraries, Johns Hopkins University. 
 
   <h3>Le Jeu des échecs moralisé</h3>
-     <p> <strong>Credit Line:</strong>  <i>Le Jeu des échecs moralisé,</i> University of Chicago Library MS 392, [image number], [leaf number], Special Collection Research Center, University of Chicago Library.   
-<p>  e.g. the title page would be cited as: <i>Le Jeu des échecs moralisé,</i> University of Chicago Library MS 392, image 13, leaf 1r, Special Collection Research Center, University of Chicago Library.
+     <p> <strong>Credit Line:</strong>  <i>Le Jeu des échecs moralisé,</i> University of Chicago Library MS 392, [image number], [leaf number], Hanna Holborn Gray Special Collections Research Center, University of Chicago Library.   
+<p>  e.g. the title page would be cited as: <i>Le Jeu des échecs moralisé,</i> University of Chicago Library MS 392, image 13, leaf 1r, Hanna Holborn Gray Special Collections Research Center, University of Chicago Library.
 
 <h2>Requesting Permission and Reproductions</h2>
   
@@ -59,7 +59,7 @@ src="images/theuniversityofchicagolibrary.gif"/></a></div>
 <h3>Le Roman de la Rose</h3>
   <p> <strong>Requesting permission:</strong>
 Use of images from <i>Le Roman de la Rose</i> requires permission from The University of Chicago and Johns Hopkins University.  Please consult the <a
-      href="https://www.lib.uchicago.edu/scrc/visiting/permission/">permissions policies</a> of the Special Collections Research Center and the Sheridan Library's <a href="https://dlmm.library.jhu.edu/en/romandelarose/">Roman de la Rose</a> site. 
+      href="https://www.lib.uchicago.edu/scrc/visiting/permission/">permissions policies</a> of the Hanna Holborn Gray Special Collections Research Center and the Sheridan Library's <a href="https://dlmm.library.jhu.edu/en/romandelarose/">Roman de la Rose</a> site. 
      <p> <strong>Requesting reproductions:</strong>
 To request high resolution reproductions of images from <i>Le Roman de la Rose</i> please see the Sheridan Library's <a href="https://dlmm.library.jhu.edu/en/romandelarose/">Roman de la Rose</a> site. 
 
@@ -67,10 +67,10 @@ To request high resolution reproductions of images from <i>Le Roman de la Rose</
 <h3>Le Jeu des échecs moralisé</h3>
      <p> <strong>Requesting permission:</strong>
 Use of images from <i>Le Jeu des échecs moralisé</i>  requires permission from The University of Chicago.  Please consult the <a
-      href="https://www.lib.uchicago.edu/scrc/visiting/permission/">permissions policies</a> of the Special Collections Research Center. 
+      href="https://www.lib.uchicago.edu/scrc/visiting/permission/">permissions policies</a> of the Hanna Holborn Gray Special Collections Research Center. 
 
      <p> <strong>Requesting reproductions:</strong>
-To request high resolution reproductions of images from <i>Le Jeu des échecs moralisé</i> please consult the Special Collections Research Center's <a href="https://www.lib.uchicago.edu/scrc/visiting/copyservices/">Copying Services</a> page.
+To request high resolution reproductions of images from <i>Le Jeu des échecs moralisé</i> please consult the Hanna Holborn Gray Special Collections Research Center's <a href="https://www.lib.uchicago.edu/scrc/visiting/copyservices/">Copying Services</a> page.
 
  
 
