Update department name.

--- a/web/UofCLibraryBackgrounder.html
+++ b/web/UofCLibraryBackgrounder.html
@@ -51,7 +51,7 @@ As a center of intense intellectual inquiry, the University of Chicago Library s
 <h2>  Using the Library</h2>
 
   <p>
-University of Chicago faculty, students and staff have borrowing privileges and can access the Library’s electronic resources remotely.   The Library’s physical collections are available to other researchers upon application, and a membership program is available to organizations. The Special Collections Research Center’s collections are available to scholars and independent researchers with prior contact; the Center’s exhibitions are open to the public.  The John Crerar Library is open to members of the public conducting research in the sciences.  <a
+University of Chicago faculty, students and staff have borrowing privileges and can access the Library’s electronic resources remotely.   The Library’s physical collections are available to other researchers upon application, and a membership program is available to organizations. The Hanna Holborn Gray Special Collections Research Center’s collections are available to scholars and independent researchers with prior contact; the Center’s exhibitions are open to the public.  The John Crerar Library is open to members of the public conducting research in the sciences.  <a
 href="http://www1.lib.uchicago.edu/cgi-bin/nand/search/diglist?search-keywords-0=*&amp;search=::CONFIG::defsearch">Locally
 created digital collections </a> are available online to all. </p>
 
@@ -101,9 +101,9 @@ East Asia, South Asia, Middle East, and Slavic and Eastern European.</li>
 </ul>
 </div>
  
-<h2>Special Collections Research Center</h2>
+<h2>Hanna Holborn Gray Special Collections Research Center</h2>
 
-<p> The Special Collections Research Center, the principal repository for and steward of the Library's rare books, manuscripts, University Archives, and the <a href="http://www.lib.uchicago.edu/e/su/cja/">Chicago Jazz Archives</a>, provides primary sources to stimulate, enrich, and support research, teaching, learning and administration at the University of Chicago.  Special Collections makes these resources available to a broad constituency as part of the University's engagement with the larger community of scholars and independent researchers.  </p>
+<p> The Hanna Holborn Gray Special Collections Research Center, the principal repository for and steward of the Library's rare books, manuscripts, University Archives, and the <a href="http://www.lib.uchicago.edu/e/su/cja/">Chicago Jazz Archives</a>, provides primary sources to stimulate, enrich, and support research, teaching, learning and administration at the University of Chicago.  Special Collections makes these resources available to a broad constituency as part of the University's engagement with the larger community of scholars and independent researchers.  </p>
 
 <div id="list">
 <ul>
