--- a/web/index.html
+++ b/web/index.html
@@ -85,7 +85,7 @@ style="font-size: .8em;">(The Moralized Game of Chess)</span></a>
 	
 </div><!--column1-->
 <div id="column2">
-        <a href="http://www.lib.uchicago.edu/scrc">The University of Chicago Library<br />Special Collections Research Center</a>
+        <a href="http://www.lib.uchicago.edu/scrc">The University of Chicago Library<br />Hanna Holborn Gray Special Collections Research Center</a>
 	<a href="rights.html"> Copyright and Reproductions</a>
 	<a href="acknowledgements.html">Acknowledgements</a>
   	<a href="links.html">Related Links</a>
